# umti

./: CMakeLists.txt  README.md  lv_conf.h
fonts/: roboto_400.c  roboto_600.c  roboto_black_18.c  roboto_mono_18.c
icons/: apps_icon.c  bella_mini.c  home_icon.c  olive_mini.c  settings_icon.c  wifi_1_icon.c  wifi_2_icon.c  wifi_3_icon.c
lib/: .gitmodules
src/hal/: hal_display.h  hal_input.h
src/ui/: screen_main.cpp  screen_main.h  um_style.h
